# cpp-recipe-master

./: CMakeLists.txt  build_errors.txt  main.cpp  receipebook.cpp  receipebook.h
include/: mainwindow.h  recipebook.h  utils.h
src/: CMakeLists.txt  recipebook.cpp  recipebook.h
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
